<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Send" android:id="@+id/constraintLayoutSend">
    <TextView
            android:text="@string/ascii_size_warning"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:id="@+id/editTextContent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:maxLength="@integer/maximum_send_text_characters"
                    android:inputType="textMultiLine|text"
                    android:gravity="top"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/buttonSend" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSendTitle" android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/sample_60_90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCharacterLimit"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
            <Button
                    android:id="@+id/buttonSend"
                    android:text="@string/button_send"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:focusable="true"/>
            <Button
                    android:id="@+id/buttonClear"
                    android:text="@string/clear"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"
                    android:focusable="true" app:layout_constraintStart_toEndOf="@+id/buttonSend"
            />
            <TextView
                    android:text="@string/text_to_send"
                    android:labelFor="@id/editTextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewSendTitle"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>